[package]
name = "outbe-metadosis"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
outbe-macros.workspace = true
outbe-common.workspace = true
outbe-primitives = { workspace = true, features = ["test-utils"] }
outbe-desis.workspace = true
outbe-tribute.workspace = true
outbe-promislimit.workspace = true
outbe-lysis.workspace = true
outbe-oracle.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
thiserror.workspace = true

[dev-dependencies]
outbe-nod.workspace = true
outbe-nodfactory.workspace = true

[lints]
workspace = true
