[package]
name = "outbe-nodfactory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
outbe-common.workspace = true
outbe-primitives.workspace = true
outbe-nod.workspace = true
outbe-gratis.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
thiserror.workspace = true
ring.workspace = true
hex.workspace = true

[dev-dependencies]
outbe-primitives = { workspace = true, features = ["test-utils"] }
alloy-primitives = { workspace = true, features = ["rand"] }

[features]
default = []
test-utils = ["outbe-primitives/test-utils"]

[package.metadata.cargo-machete]
ignored = ["hex"]

[lints]
workspace = true
