[package]
name = "outbe-promisfactory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
outbe-primitives = { workspace = true, features = ["test-utils"] }
outbe-promis.workspace = true
outbe-fidelity.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true

[lints]
workspace = true
