[package]
name = "outbe-promisfactory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
outbe-primitives = { workspace = true, features = ["test-utils"] }
outbe-promis.workspace = true
outbe-gratisfactory.workspace = true
outbe-fidelity.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true

[dev-dependencies]
# Drive the confidential Gratis mint in convert_to_gratis tests via the
# in-process enclave engine, and decrypt the minted balance to assert on it.
outbe-gratis = { workspace = true, features = ["test-enclave"] }
outbe-tee.workspace = true
outbe-tee-enclave.workspace = true

[lints]
workspace = true
