[package]
name = "outbe-tribute"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
outbe-macros.workspace = true
outbe-primitives.workspace = true
outbe-common.workspace = true
outbe-compressed-entities.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-sol-types.workspace = true
outbe-offchain-storage.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["rand"] }
mongodb.workspace = true

[features]
default = []
test-utils = ["outbe-primitives/test-utils"]

[lints]
workspace = true
